<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Longitude"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtValueLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_Longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLongitude"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Latitude"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLongitude" />

    <TextView
        android:id="@+id/txtValueLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_Latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLongitude"
        app:layout_constraintTop_toBottomOf="@+id/txtValueLongitude" />

    <TextView
        android:id="@+id/txtDbm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Dbm"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLatitude" />

    <TextView
        android:id="@+id/txtValueDbm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_Dbm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDbm"
        app:layout_constraintTop_toBottomOf="@+id/txtValueLatitude" />

    <TextView
        android:id="@+id/txtLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Level"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDbm" />

    <TextView
        android:id="@+id/txtValueLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_Level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLevel"
        app:layout_constraintTop_toBottomOf="@+id/txtValueDbm" />

    <TextView
        android:id="@+id/txtRsrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Rsrp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLevel" />

    <TextView
        android:id="@+id/txtValueRsrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_Rsrp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRsrp"
        app:layout_constraintTop_toBottomOf="@+id/txtValueLevel" />

    <TextView
        android:id="@+id/txtRsrq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Rsrq"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRsrp" />

    <TextView
        android:id="@+id/txtValueRsrq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_Rsrq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRsrq"
        app:layout_constraintTop_toBottomOf="@+id/txtValueRsrp" />

    <TextView
        android:id="@+id/txtRssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Rssi"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRsrq" />

    <TextView
        android:id="@+id/txtValueRssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_Rssi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRssi"
        app:layout_constraintTop_toBottomOf="@+id/txtValueRsrq" />

    <TextView
        android:id="@+id/txtRssnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Rssnr"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRssi" />

    <TextView
        android:id="@+id/txtValueRssnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_Rssnr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtRssnr"
        app:layout_constraintTop_toBottomOf="@+id/txtValueRssi" />

    <TextView
        android:id="@+id/txtTypeNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_NetworkType"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRssnr" />

    <TextView
        android:id="@+id/txtValueTypeNetWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_NetworkType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTypeNetwork"
        app:layout_constraintTop_toBottomOf="@+id/txtValueRssnr" />

    <!--Button-->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_StartData"
        app:layout_constraintBottom_toTopOf="@+id/layoud4G"
        app:layout_constraintEnd_toStartOf="@+id/btnStop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRssnr" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/title_StopData"
        app:layout_constraintBottom_toTopOf="@+id/layoud4G"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStart"
        app:layout_constraintTop_toBottomOf="@id/txtRssnr" />

    <LinearLayout
        android:id="@+id/layoud4G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStop">

        <TextView
            android:id="@+id/txtNetwork4G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_4G"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchNetwork4G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoud5G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoud4G">

        <TextView
            android:id="@+id/txtNetwork5G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_5G"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchNetwork5G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>